feat: Add about and blog pages
This commit adds the about and blog pages to the project. The about page contains a simple layout with a heading, paragraph, and a link to the home page. The blog page also has a similar layout with a heading, paragraph, and links to the home page and the about page.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,10 +4,9 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1>Astro blog</h1>
+		<h1>Astro test</h1>
     <p> this is a test paragraph</p>
-    <a href="/blog">Bblog</a>
-    <a href="/about">About</a>
+    <a href="/"> Return to home</a>
 	</main>
 </Layout>
 
@@ -15,11 +14,6 @@ import Layout from '../layouts/Layout.astro';
 <style>
   body {
     background-color: white;
-  }
-  main {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
   }
 	h1 {
 		font-size: 4rem;
