--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
 	<main>
 		<h1>Astro blog</h1>
     <p> this is a test paragraph</p>
-    <a href="/blog">Bblog</a>
+    <a href="/">Return to home</a>
     <a href="/about">About</a>
 	</main>
 </Layout>
@@ -15,11 +15,6 @@ import Layout from '../layouts/Layout.astro';
 <style>
   body {
     background-color: white;
-  }
-  main {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
   }
 	h1 {
 		font-size: 4rem;
