--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,7 +5,11 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1>Astro blog</h1>
-    <p> this is a test paragraph</p>
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
     <a href="/">Return to home</a>
     <a href="/about">About</a>
 	</main>
