--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,66 +1,74 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
-const title = 'Astro variable';
+const title = "Astro variable";
 const identity = {
-  firstName: "Sarah",
-  country: "Canada",
-  occupation: "Technical Writer",
-  hobbies: ["photography", "birdwatching", "baseball"],
+	firstName: "Sarah",
+	country: "Canada",
+	occupation: "Technical Writer",
+	hobbies: ["photography", "birdwatching", "baseball"],
 };
 
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 const happy = true;
 const finished = false;
-const goal = 3
-const testColor = 'blue';
+const goal = 3;
+const testColor = "blue";
 ---
 
-
 <html>
-  <head>
-    <title>{ title }</title>    
-  </head>
-  <body>
-    <main>
-      <Header />
-      <h1>{title}</h1>
-      <ul>
-        <li>My name is {identity.firstName}.</li>
-        <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
-        {identity.hobbies.length >= 2 &&
-          <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
-        }
-      </ul>
-      <p>My skills are:</p>
-      <ul>
-        {skills.map((skill) => <li>{skill}</li>)}
-      </ul>
-      {happy && <p>I am happy to be learning Astro!</p>}
-      {finished && <p>I finished this tutorial!</p>}
-      {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+	<head>
+		<title>{title}</title>
+	</head>
+	<body>
+		<main>
+			<Header />
+			<h1>{title}</h1>
+			<ul>
+				<li>My name is {identity.firstName}.</li>
+				<li>
+					I live in {identity.country} and I work as a {identity.occupation}.
+				</li>
+				{
+					identity.hobbies.length >= 2 && (
+						<li>
+							Two of my hobbies are: {identity.hobbies[0]} and{" "}
+							{identity.hobbies[1]}
+						</li>
+					)
+				}
+			</ul>
+			<p>My skills are:</p>
+			<ul>
+				{skills.map((skill) => <li>{skill}</li>)}
+			</ul>
+			{happy && <p>I am happy to be learning Astro!</p>}
+			{finished && <p>I finished this tutorial!</p>}
+			{
+				goal === 3 ? (
+					<p>My goal is to finish in 3 days.</p>
+				) : (
+					<p>My goal is not 3 days.</p>
+				)
+			}
 
-      <a href="/"> Return to home</a>
-      <Footer/>
-     
-    </main>
-    <script>
-      import "../scripts/menu.js";
-    </script>
-
-  </body>
+			<a href="/"> Return to home</a>
+			<Footer />
+		</main>
+		<script>
+			import "../scripts/menu.js";
+		</script>
+	</body>
 </html>
 
-
-<style define:vars={{testColor}}>
+<style define:vars={{ testColor }}>
 	h1 {
-    color: var(--testColor);
+		color: var(--testColor);
 		font-size: 4rem;
 		font-weight: 700;
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
 	}
-
 </style>
