--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,14 @@ html {
   background-color: #f1f5f9;
   font-family: sans-serif;
 }
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
 
 body {
   margin: 0 auto;
@@ -62,6 +70,16 @@ h1 {
   height: 5px;
   margin-bottom: 10px;
   background-color: #ff9776;
+}
+
+html.dark .astro-code,
+html.dark .astro-code span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+  /* Optional, if you also want font styles */
+  font-style: var(--shiki-dark-font-style) !important;
+  font-weight: var(--shiki-dark-font-weight) !important;
+  text-decoration: var(--shiki-dark-text-decoration) !important;
 }
 
 @media screen and (min-width: 636px) {
